# DeepSeekFathom

./: .gitignore  CHANGELOG-CLI.md  CHANGELOG-DESKTOP.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: windows-desktop.yml
assets/: windows-version-info.txt
scripts/: build_windows_exe.ps1  desktop_launcher.py  windows_installer.iss
src/deepseek_tulagent/: agent.py  cli.py  config.py  messages.py  policy.py  provider.py  session.py  skills.py  tools.py  tui.py  ui.py  updates.py
src/deepseek_tulagent/desktop/: __init__.py  app.py
src/deepseek_tulagent/desktop/assets/: app.js  index.html  style.css
src/deepseekfathom/_core/: capabilities.py  reply_versions.py
src/deepseekfathom/_core/desktop/: app.py
src/deepseekfathom/_core/desktop/assets/: app.js
tests/: test_agent.py  test_extension_integration.py  test_extensions_ui.py  test_reply_versions.py
